# firebase-aio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
firebaseaio/: __init__.py  firebaseaio.py  sseclient.py
pyrebase/: pyre_sseclient.py  pyrebase.py
