[build-system]
requires = [
    "setuptools>=61.0",
    "oauth2client>=3.0.0",
    "aiohttp>=3.7.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "firebase-aio"
version = "0.1.0"
authors = [
  { name="09ghostrider" },
]
description = "A simple async python wrapper for the [Firebase API](https://firebase.google.com)."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/09ghostrider/firebase-aio"
"Bug Tracker" = "https://github.com/09ghostrider/firebase-aio/issues"